--- a/Barbu/gradle/wrapper/gradle-wrapper.properties
+++ b/Barbu/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Sep 01 13:16:58 CEST 2020
+#Sun Oct 25 16:27:00 CET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
